<resources>
    <string name="app_name">Weather</string>
    <string name="add_city">Add City</string>
    <string name="city_name">City name</string>
    <string name="refresh">Refresh</string>
    <string name="delete_all">Delete All</string>
    <string name="about">About</string>
    <string name="about_this_app">About this app</string>

    <string name="about_body">Weather is a weather application intended to allow checking the weather to be simple and enjoyable,
without ads and articles eating up all of your data.\n\n\n

This weather application was created to practice MVVM structure, API calls with Retrofit,
basic database operations with Room, Kotlin coroutines, dependency injection with Dagger/Hilt,
and Navigation component. This is effectively my first attempt at using these components
in a real application, and not a sterile test environment\n\n\n

Icons designed by Freepik from Flaticon and edited by myself in Inkscape\n\n\n

I hope your weather checking is an enjoyable experience :)\n\n\n

- cseltz</string>

    <string name="weather_icon">Weather Icon</string>
    <string name="wind_icon">Wind Icon</string>
    <string name="delete_all_dialog_title">Confirm Deletion</string>
    <string name="delete_all_dialog_message">Are you sure you want to delete all currently stored cities?</string>
    <string name="delete_all_dialog_cancel">Cancel</string>
    <string name="delete_all_dialog_confirm">Delete All</string>
    <string name="delete_city_dialog_title">Confirm Deletion</string>
    <string name="delete_city_dialog_message">Are you sure you want to delete this city?</string>
    <string name="delete_city_dialog_cancel">Cancel</string>
    <string name="delete_city_dialog_confirm">Delete</string>
    <string name="pop_icon">Probability of precipitation icon</string>
    <string name="feels_like">Feels like</string>
    <string name="wind_header">Wind</string>
    <string name="humidity_header">Humidity</string>
    <string name="pop_header">Chance of rain/snow</string>
    <string name="probability_of_precipitation_icon">Probability of precipitation icon</string>
    <string name="dark_mode">Dark mode</string>

</resources>