<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardBackgroundColor="#ff9900">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/city_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="San Francisco" />

                <TextView
                    android:id="@+id/description_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/top_card_horizontal_50_guideline"
                    app:layout_constraintStart_toStartOf="@id/city_textview"
                    app:layout_constraintTop_toBottomOf="@id/city_textview"
                    tools:text="Partly cloudy" />

                <ImageView
                    android:id="@+id/weather_icon"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/top_card_vertical_40_guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/top_card_horizontal_50_guideline"
                    tools:src="@drawable/sunny" />

                <TextView
                    android:id="@+id/temp_textview"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="64sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/top_card_vertical_60_guideline"
                    app:layout_constraintTop_toBottomOf="@id/top_card_horizontal_50_guideline"
                    tools:text="40F" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/top_card_horizontal_50_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="100dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/top_card_vertical_60_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".6" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/top_card_vertical_40_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".4" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="12dp">

            <com.cseltz.android.weather.util.NestedScrollableHost
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/daily_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.cseltz.android.weather.util.NestedScrollableHost>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="12dp"
            android:padding="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/feels_like_icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="16dp"
                    android:src="@drawable/thermometer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="#787878" />

                <TextView
                    android:id="@+id/feels_like_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="-8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/feels_like"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/feels_like_icon"
                    app:layout_constraintTop_toTopOf="@id/feels_like_icon"
                    app:layout_goneMarginTop="8dp" />

                <TextView
                    android:id="@+id/feels_like_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="28sp"
                    app:layout_constraintStart_toStartOf="@id/feels_like_header"
                    app:layout_constraintTop_toBottomOf="@id/feels_like_header"
                    tools:text="30F" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/feels_like_divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/feels_like_header"
                    app:layout_constraintTop_toBottomOf="@id/feels_like_textview" />

                <ImageView
                    android:id="@+id/pop_icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/pop"
                    app:layout_constraintStart_toStartOf="@id/feels_like_icon"
                    app:layout_constraintTop_toBottomOf="@id/feels_like_divider"
                    app:tint="#787878" />

                <TextView
                    android:id="@+id/pop_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/pop_header"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/feels_like_header"
                    app:layout_constraintTop_toTopOf="@id/pop_icon" />

                <TextView
                    android:id="@+id/pop_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="28sp"
                    app:layout_constraintStart_toStartOf="@id/pop_header"
                    app:layout_constraintTop_toBottomOf="@id/pop_header"
                    tools:text="45%" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/pop_divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/pop_header"
                    app:layout_constraintTop_toBottomOf="@id/pop_textview" />


                <ImageView
                    android:id="@+id/wind_icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/wind"
                    app:layout_constraintStart_toStartOf="@id/feels_like_icon"
                    app:layout_constraintTop_toBottomOf="@id/pop_divider"
                    app:tint="#787878" />

                <TextView
                    android:id="@+id/wind_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/wind_header"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/feels_like_header"
                    app:layout_constraintTop_toTopOf="@id/wind_icon" />

                <TextView
                    android:id="@+id/wind_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="28sp"
                    app:layout_constraintStart_toStartOf="@id/wind_header"
                    app:layout_constraintTop_toBottomOf="@id/wind_header"
                    tools:text="30 MPH North" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/wind_divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/wind_header"
                    app:layout_constraintTop_toBottomOf="@id/wind_textview" />

                <ImageView
                    android:id="@+id/humidity_icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/humidity"
                    app:layout_constraintStart_toStartOf="@id/feels_like_icon"
                    app:layout_constraintTop_toBottomOf="@id/wind_divider"
                    app:tint="#787878" />

                <TextView
                    android:id="@+id/humidity_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/humidity_header"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/wind_header"
                    app:layout_constraintTop_toTopOf="@id/humidity_icon" />

                <TextView
                    android:id="@+id/humidity_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="28sp"
                    app:layout_constraintStart_toStartOf="@id/humidity_header"
                    app:layout_constraintTop_toBottomOf="@id/humidity_header"
                    tools:text="87%" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>